2010-04-25  James Youngman  <jay@gnu.org>

	Use valgrind for large tests.
	* tests/large/admin.sh: Use valgrind.

	Use valgrind for get tests.
	* tests/get/annotate.sh: Use valgrind.
	* tests/get/a-option.sh: Likewise.
	* tests/get/branch.sh: Likewise.
	* tests/get/create.sh: Likewise.
	* tests/get/defsid.sh: Likewise.
	* tests/get/delta-summary.sh: Likewise.
	* tests/get/errorcases.sh: Likewise.
	* tests/get/excl_ig_1.sh: Likewise.
	* tests/get/excl_ig_2.sh: Likewise.
	* tests/get/gg_get_ix.sh: Likewise.
	* tests/get/included.sh: Likewise.
	* tests/get/middle-fail.sh: Likewise.
	* tests/get/no-sfile.sh: Likewise.
	* tests/get/only-one.sh: Likewise.
	* tests/get/optorder.sh: Likewise.
	* tests/get/removed-delta.sh: Likewise.
	* tests/get/sep_subst.sh: Likewise.
	* tests/get/sf111140.sh: Likewise.
	* tests/get/sf479916.sh: Likewise.
	* tests/get/sf664900.sh: Likewise.
	* tests/get/sf865422.sh: Likewise.
	* tests/get/sid-select.sh: Likewise.
	* tests/get/sid-select2.sh: Likewise.
	* tests/get/subst.sh: Likewise.
	* tests/get/t-option.sh: Likewise.

	Use valgrind for delta tests.
	* tests/delta/basic.sh: Use valgrind.
	* tests/delta/errorcase.sh: Likewise.
	* tests/delta/n-option.sh: Likewise.
	* tests/delta/options.sh: Likewise.
	* tests/delta/nulldelta.sh: Likewise

	Use valgrind for binary file tests, sccs tests and cdc tests.
	* tests/binary/auto.sh: Use valgrind.
	* tests/binary/binbasic.sh: Likewise.
	* tests/binary/eightbit.sh: Likewise.
	* tests/binary/seeking.sh: Likewise.
	* tests/bsd-sccs/sf595594.sh: Likewise.
	* tests/bsd-sccs/driver-basic.sh: Likewise.
	* tests/bsd-sccs/delsfile.sh: Likewise.
	* tests/cdc/1general.sh: Use valgrind.
	* tests/cdc/2comment.sh: Likewise.
	* tests/cdc/3MRs.sh: Likewise.
	* tests/cdc/4order.sh: Likewise.

	Support running the regression tests under valgrind.
	* configure.ac: Allow the user to specify --without-valgrind.
	* tests/admin/admin-hz.sh: Use valgrind.
	* tests/admin/abspath.sh: Likewise.