@@ -1,5 +1,11 @@
 2010-04-25  James Youngman  <jay@gnu.org>
 
+	Use valgrind for prs tests.
+	* tests/prs/keywords.sh: Use valgrind.
+	* tests/prs/format.sh: Likewise.
+	* tests/prs/exists.sh: Likewise.
+	* tests/prs/body.sh: Likewise.
+
 	Use valgrind for large tests.
 	* tests/large/admin.sh: Use valgrind.
 
